--- a/app/styles/_header.scss
+++ b/app/styles/_header.scss
@@ -111,14 +111,14 @@
     }
   }
 
-  //Request Invite button
-  &__cta {
-    font-size: $font-sm;
-    color: $white;
-    transition: opacity 300ms ease-in-out;
+  // //Request Invite button ---
+  // &__cta {
+  //   font-size: $font-sm;
+  //   color: $white;
+  //   transition: opacity 300ms ease-in-out;
 
-    &:hover {
-      opacity: 0.75;
-    }
-  }
+  //   &:hover {
+  //     opacity: 0.75;
+  //   }
+  // }
 }
