--- a/app/styles/_feature.scss
+++ b/app/styles/_feature.scss
@@ -1,5 +1,10 @@
 .feature {
   background-color: $lightGrayishBlue;
+  text-align: center;
+  @include breakpoint-up(medium) {
+    text-align: left;
+  }
+
   &__intro {
     margin-bottom: 3.75rem;
     @include breakpoint-up(large) {
@@ -16,8 +21,6 @@
 
   &__item {
     padding: 0.9375rem;
-    border: 1px solid magenta;
-
     @include breakpoint-up(medium) {
       flex: 0 0 50%;
     }
@@ -39,10 +42,10 @@
     font-weight: 300;
     line-height: 1.15;
     color: $darkBlue;
-    margin-bottom: 1.5rem;
+    margin-bottom: 1rem;
     @include breakpoint-up(large) {
       font-size: 1.5rem;
-      margin-bottom: 2.125rem;
+      margin-bottom: 1.5rem;
     }
   }
 
