--- a/app/styles/_globals.scss
+++ b/app/styles/_globals.scss
@@ -17,6 +17,7 @@ body {
   font-weight: 300;
   color: $grayishBlue;
   line-height: 1.3;
+  overflow-x: hidden;
 
   @include breakpoint-up(large) {
     font-size: $font-med;
@@ -139,6 +140,8 @@ a:hover {
 //Buttons
 button,
 .button {
+  position: relative;
+  display: inline-block;
   padding: 0.875rem 2.1875rem;
   background: linear-gradient(to right, $limeGreen, $brightCyan);
   border: 0;
@@ -146,12 +149,24 @@ button,
   cursor: pointer;
   color: $white;
   font-weight: 400;
-  display: inline-block;
   font-size: $font-sm;
   transition: opacity 300ms ease-in-out;
+  overflow: hidden;
 
-  &:hover {
-    opacity: 0.75;
+  &::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    background-color: rgba(255, 255, 255, 0.25);
+    opacity: 0;
+    transition: opacity 150ms ease-in-out;
+  }
+
+  &:hover::before {
+    opacity: 1;
   }
 }
 
